# ChangeLog for x11-misc/okindd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*okindd-0.5.8 (24 May 2009)

  24 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -okindd-0.5.7-r1.ebuild, +okindd-0.5.8.ebuild,
  files/okindd_home_and_naming.patch:
  version bump :)

  18 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  files/okindd_home_and_naming.patch:
  patch fix

*okindd-0.5.7-r1 (18 Mar 2009)

  18 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +files/okindd_home_and_naming.patch, -files/okindd_install.patch,
  +okindd-0.5.7-r1.ebuild, -okindd-0.5.7.ebuild:
  modified home config folder to match app name

*okindd-0.5.7 (17 Mar 2009)

  17 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +files/okindd_install.patch, +metadata.xml, +okindd-0.5.7.ebuild:
  new ebuild. app description is misguiding, app is qt-based and doesn't
  need KDE
