@@ -1,5 +1,5 @@
 AUX okindd_home_and_naming.patch 492 RMD160 10faa113f93a5c083e1c8f882bb488f5c1d1ecdf SHA1 e6d659c75656320fcd5e05ebf3112fa15f4430cf SHA256 47a264b5fc69502124d89dcfb87e81da34e4e379c5031c7db37fd00613b8ca94
 DIST okindd-0.5.8-20090410.tar.bz2 126046 RMD160 d7cc8f342993a161c9055a29e4f88190973bcc20 SHA1 df85f888be257a16709f649358dfdd7ae120b44b SHA256 0979477efc0450a293bb714304a6e68aa4935182a830d8585726c9eb613567d2
-EBUILD okindd-0.5.8.ebuild 1077 RMD160 af205a8e58a971aa8fe0f79b53eb2ae3c4bbf055 SHA1 7ac3158a74b59b25e9d81191d968b5f999dda02c SHA256 22f77456058571a0fcb0ecd47e7eae1cf738be71260b582a122d5c14f37b7a06
-MISC ChangeLog 942 RMD160 c5fff340f87acc0719d08cf214f7aa7d1f5bdbf7 SHA1 751dfec8a632c67fa6134bb2f30c80bc0d973f79 SHA256 32c1004b3ac4e9888bbc2a32f67d53765711534747566383e59eabf9231362c0
+EBUILD okindd-0.5.8.ebuild 1015 RMD160 df30055b16e317145f663c09151bd2d576f4bab9 SHA1 79daeefab7bb1a5c849b63d431413ef0dc8008ef SHA256 8d9e8f48f7a695b153e400ae1eeb79915233c5ec3f1509eae1e1ec354427e008
+MISC ChangeLog 1069 RMD160 7cd13a4c3120e7226ed7b634987cb1e80db3ed48 SHA1 2472a19aea963052ba3d9bc868563fc6a66c9562 SHA256 98f0c5486bdae0c7627cc79e68d8a7585e9b080e6c86a38fd49e209e2d49fda9
 MISC metadata.xml 157 RMD160 ac97f8cc970b649f4d061f6e4441eaf6144524e3 SHA1 415c2e405c673551de51cf6623305f9dbcc70b23 SHA256 94b6a379608ee8b74b175f0dfe5b2312658faf5eca74bba0787fc02c3d6859d6
