@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jul 2009; Davide Pesavento <davidepesa@gmail.com> okindd-0.5.8.ebuild:
+  Switch to qt4-edge, drop useless src_configure.
+
 *okindd-0.5.8 (24 May 2009)
 
   24 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
